add amz secure property reader